hook up tsv schedule and schedule slate

--- a/templates/egx/schedule.webvfx.html
+++ b/templates/egx/schedule.webvfx.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+    <meta charset="UTF-8"> 
 		<title>EGX Schedule</title>
 		<style type="text/css">
 
@@ -162,54 +163,68 @@
 		<script src="../../lib/jquery-2.1.3.min.js"></script>
 		<script src="../../lib/TweenMax.min.js"></script>
 		<script src="webvfx-setup.js"></script>
-		<script src="schedule1.js"></script>
+		<script src="schedule.js"></script>
 		<script type="text/javascript">
+
+			var pskip = "0";
+			var pday = "Friday";
+ 
+			function read_webvfx_params() {
+				// read parameters supplied by webvfx and update template values
+				pday = webvfx.getStringParameter("day");
+				pskip = webvfx.getStringParameter("skip");
+			}
 
 			function doAnimation() {
 
-				for (var i = 0; i < boxes.length; i++) {
-					addBox(boxes[i].heading, boxes[i].subHeading, boxes[i].timeStart, boxes[i].timeEnd, boxes[i].image);
-				}
+        pskip = parseInt(pskip);
 
-				var slate = document.getElementById("slate");
-				
-				var leftOffset = 319;
+        for (var i = 0; i < boxes.length; i++) {
+          if( boxes[i].day == pday ) {
+            if( pskip-- <= 0 ) {
+              addBox(boxes[i].heading, boxes[i].subHeading, boxes[i].timeStart, boxes[i].timeEnd, boxes[i].image);
+            }
+          }
+        }
 
-				var delay = 3; // should be >= moveTime
-				var moveTime = .75;
+        var slate = document.getElementById("slate");
+        
+        var leftOffset = 319;
 
-				tl
-					.timeScale(1)
-					.add("start", -delay)
+        var delay = 3; // should be >= moveTime
+        var moveTime = .75;
 
-					.to("#corner-wipe", .75, { css: { width: "4700px", height: "3172px", left: 0, top: 0 }, ease:Power0.easeIn } )
-					.to("#corner-overlay", .5, { css: { left : 0, top : 0 }, ease:Power1.easeOut }, "-=.5" )
-					.from("#schedule", 0.0000001, { css: { left : 3000 } } )
-					.to("#corner-wipe", .75, { css: { width: "0px", height: "0px", left: -1474, top: -1474 }, ease:Power0.easeIn } )
+        tl
+          .timeScale(1)
+          .add("start", -delay)
 
-					.staggerTo(".schedule-box", moveTime, { css: { "left" : 1550 + leftOffset }, ease:Power4.easeIn }, delay, "start" )
+          .to("#corner-wipe", .75, { css: { width: "4700px", height: "3172px", left: 0, top: 0 }, ease:Power0.easeIn } )
+          .to("#corner-overlay", .5, { css: { left : 0, top : 0 }, ease:Power1.easeOut }, "-=.5" )
+          .from("#schedule", 0.0000001, { css: { left : 3000 } } )
+          .to("#corner-wipe", .75, { css: { width: "0px", height: "0px", left: -1474, top: -1474 }, ease:Power0.easeIn } )
 
-					// large
-					.staggerTo(".schedule-box", moveTime, { css: { "left" : 1000 + leftOffset, "transform" : "scale(1.5)" } , ease:Power2.easeIn }, delay, "start+=" + delay )
-					.staggerTo(".schedule-text", moveTime, { css: { "background-color" : "rgba(71, 187, 150, 1)" } , ease:Power2.easeIn }, delay, "start+=" + delay )
-					.staggerTo(".schedule-text-wrapper", moveTime / 2, { css: { "transform" : "scale(0.91)", "padding" : "16px 0" } , ease:Power2.easeIn }, delay, "start+=" + delay )
-					
-					// small
-					.staggerTo(".schedule-box", moveTime, { css: { "left" : 450 + leftOffset, "transform" : "scale(1)" } , ease:Power2.easeIn }, delay, "start+=" + delay * 2 )
-					.staggerTo(".schedule-text", moveTime / 2, { css: { "background-color" : "rgba(71, 187, 150, 0)" } , ease:Power2.easeIn }, delay, "start+=" + delay * 2 )
-					.staggerTo(".schedule-text-wrapper", moveTime, { css: { "transform" : "scale(1)", "padding" : "20px 0" } , ease:Power2.easeIn }, delay, "start+=" + delay * 2 )
+          .staggerTo(".schedule-box", moveTime, { css: { "left" : 1550 + leftOffset }, ease:Power4.easeIn }, delay, "start" )
 
-					.staggerTo(".schedule-box", moveTime, { css: { "left" : leftOffset } , ease:Power2.easeIn }, delay, "start+=" + delay * 3 )
-					.staggerTo(".schedule-box", moveTime, { css: { "left" : leftOffset - 450 } , ease:Power2.easeIn }, delay, "start+=" + delay * 4 )
+          // large
+          .staggerTo(".schedule-box", moveTime, { css: { "left" : 1000 + leftOffset, "transform" : "scale(1.5)" } , ease:Power2.easeIn }, delay, "start+=" + delay )
+          .staggerTo(".schedule-text", moveTime, { css: { "background-color" : "rgba(71, 187, 150, 1)" } , ease:Power2.easeIn }, delay, "start+=" + delay )
+          .staggerTo(".schedule-text-wrapper", moveTime / 2, { css: { "transform" : "scale(0.91)", "padding" : "16px 0" } , ease:Power2.easeIn }, delay, "start+=" + delay )
+          
+          // small
+          .staggerTo(".schedule-box", moveTime, { css: { "left" : 450 + leftOffset, "transform" : "scale(1)" } , ease:Power2.easeIn }, delay, "start+=" + delay * 2 )
+          .staggerTo(".schedule-text", moveTime / 2, { css: { "background-color" : "rgba(71, 187, 150, 0)" } , ease:Power2.easeIn }, delay, "start+=" + delay * 2 )
+          .staggerTo(".schedule-text-wrapper", moveTime, { css: { "transform" : "scale(1)", "padding" : "20px 0" } , ease:Power2.easeIn }, delay, "start+=" + delay * 2 )
 
-					.staggerTo(".schedule-box", moveTime, { css: { "left" : leftOffset - 900 } , ease:Power0.easeIn }, delay, "start+=" + ((delay * 4) + moveTime) )
-					
-					// out
-					.to("#corner-wipe", .75, { css: { width: "4700px", height: "3172px", left: 0, top: 0 }, ease:Power0.easeIn }, "-=" + ((delay * 3) - 1) )
-					.to("#corner-overlay", .75, { css: { top: -1474, left: -1474 }, ease:Power0.easeIn }, "-=" + ((delay * 3) - 1.85) )
-					.to("#schedule", 0.0000001, { css: { display : "none" } }, "-=" + ((delay * 3) - 1.75) )
-					.to("#corner-wipe", .75, { css: { width: "0px", height: "0px", left: -1474, top: -1474 }, ease:Power0.easeIn }, "-=" + ((delay * 3) - 1.75) )
+          .staggerTo(".schedule-box", moveTime, { css: { "left" : leftOffset } , ease:Power2.easeIn }, delay, "start+=" + delay * 3 )
+          .staggerTo(".schedule-box", moveTime, { css: { "left" : leftOffset - 450 } , ease:Power2.easeIn }, delay, "start+=" + delay * 4 )
 
+          .staggerTo(".schedule-box", moveTime, { css: { "left" : leftOffset - 900 } , ease:Power0.easeIn }, delay, "start+=" + ((delay * 4) + moveTime) )
+          
+          // out
+          .to("#corner-wipe", .75, { css: { width: "4700px", height: "3172px", left: 0, top: 0 }, ease:Power0.easeIn }, "-=" + ((delay * 3) - 1) )
+          .to("#corner-overlay", .75, { css: { top: -1474, left: -1474 }, ease:Power0.easeIn }, "-=" + ((delay * 3) - 1.85) )
+          .to("#schedule", 0.0000001, { css: { display : "none" } }, "-=" + ((delay * 3) - 1.75) )
+          .to("#corner-wipe", .75, { css: { width: "0px", height: "0px", left: -1474, top: -1474 }, ease:Power0.easeIn }, "-=" + ((delay * 3) - 1.75) )
 			}
 
 			function addBox(heading, subHeading, timeStart, timeEnd, image) {
