--- a/templates/egx/next.webvfx.html
+++ b/templates/egx/next.webvfx.html
@@ -200,9 +200,9 @@
 				//if( pbuild == "in" ) {
 				cutIn();
 				//}
-				//fadeToOverlay();
+				fadeToOverlay();
 				//if( pbuild == "out" ) {
-				//cutOut();
+				cutOut();
 				//}
 
 			}
