--- a/templates/egx/next.webvfx.html
+++ b/templates/egx/next.webvfx.html
@@ -168,13 +168,14 @@
 				pinfo = "Join Erik Odeldahl (Design Director) to hear about the upcoming Mirror's Edge Catalyst. Discover Faith's origin story.",
 				ptime = "12:00 - 12:40",
 				pimage = "http://cdn.akamai.steamstatic.com/steam/apps/297130/ss_398947374cbd6458f9fc3142975ce0a3ac4e5b33.1920x1080.jpg?t=1447361581",
-				pbuild = "";
+				pbuild = "out";
  
 			function read_webvfx_params() {
 				// read parameters supplied by webvfx and update template values
 				pname = webvfx.getStringParameter("name");
-				ptime = webvfx.getStringParameter("time");
 				pinfo = webvfx.getStringParameter("info");
+				ptime = webvfx.getStringParameter("time");
+				pimage = webvfx.getStringParameter("image");
 				pbuild = webvfx.getStringParameter("build");
 			}
 
