--- a/templates/egx/next.webvfx.html
+++ b/templates/egx/next.webvfx.html
@@ -167,8 +167,8 @@
 			var pname = "Mirror's Edge Catalyst: Inspirations",
 				pinfo = "Join Erik Odeldahl (Design Director) to hear about the upcoming Mirror's Edge Catalyst. Discover Faith's origin story.",
 				ptime = "12:00 - 12:40",
-				pimage = "http://cdn.akamai.steamstatic.com/steam/apps/297130/ss_398947374cbd6458f9fc3142975ce0a3ac4e5b33.1920x1080.jpg?t=1447361581",
-				pbuild = "out";
+				pimage = "https://eaassets04-a.akamaihd.net/origin-com-store-damassets/content/dam/eadam/M/MIRRORS_EDGE_CATALYST/MEC_dlc_screenhi_930x524_en_US_crouch_v1.jpg",
+				pbuild = "";
  
 			function read_webvfx_params() {
 				// read parameters supplied by webvfx and update template values
